# fsm_r2

./: .gitignore  commands.txt  run_test.py  test_gui.py  test_out.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/mission_fsm/lib/mission_fsm/: fsm_node  mock_nav_server  test_signal_pub
install/mission_fsm/share/mission_fsm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/mission_fsm/share/mission_fsm/config/: areas.yaml
log/: latest_build
mission_fsm/: package.xml  setup.py
mission_fsm/mission_fsm/: __init__.py  climb_calibration_node.py  climb_test_node.py  forest_executor_node.py  fsm_node.py  keyboard_teleop_node.py  lift_cross_runner_node.py  path.py  teensy_command_node.py  test_signal_pub.py
mission_fsm/mission_fsm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
mission_fsm/mission_fsm/config/: __init__.py  areas.yaml  loader.py
mission_fsm/mission_fsm/interfaces/: apriltag_interface.py  nav_interface.py
mission_fsm/mission_fsm/mission/: mission_manager.py  mission_state.py
mission_fsm/mission_fsm/sequences/: __init__.py  lift_cross_sequence.py
mission_fsm/mission_fsm/task/: __init__.py  custom_task_manager.py  task_manager.py
mission_fsm/mission_fsm/task/states/: area_1.py  area_2.py  cmd_vel_demo.py  cmd_vel_state.py  failed_state.py  navigate_state.py  recovery_state.py  retry_state.py  sequence_state.py  test_cmd_vel_state.py  wait_signal_state.py  wait_state.py
mission_fsm/mission_fsm/ui/: dashboard.py
r2_stack/: README.md
r2_stack/r2_bringup/: CMakeLists.txt  package.xml
r2_stack/r2_bringup/config/: camera_extrinsics.yaml  pick_servo_params.yaml
r2_stack/r2_bringup/launch/: servo_stack.launch.py
r2_stack/r2_calibration/: package.xml  setup.cfg  setup.py
r2_stack/r2_calibration/r2_calibration/: extrinsic_calibrator.py  transforms.py
r2_stack/r2_interfaces/: CMakeLists.txt  package.xml
r2_stack/r2_interfaces/action/: AlignAndPick.action  LocateKfs.action
r2_stack/r2_perception/: CMakeLists.txt  package.xml
r2_stack/r2_perception/config/: kfs_localizer_params.yaml
r2_stack/r2_perception/src/: kfs_localizer_node.cpp
r2_stack/r2_servo/: package.xml  setup.cfg  setup.py
r2_stack/r2_servo/r2_servo/: pick_servo_node.py
