<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, parameters and static TF for the R2 visual servo stack.</description>
  <maintainer email="rafie.alifs@gmail.com">rafie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>r2_perception</exec_depend>
  <exec_depend>r2_servo</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <!-- realsense2_camera is required on the robot only; the launch file
       degrades gracefully when it is absent (use_camera:=false). -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
