cmake_minimum_required(VERSION 3.8)
project(r2_interfaces)

find_package(ament_cmake REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "action/AlignAndPick.action"
  "action/LocateKfs.action"
  DEPENDENCIES geometry_msgs
)

ament_package()
