<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>r2_perception</name>
  <version>0.1.0</version>
  <description>KFS cube localizer: aligned depth + PCL clustering to a settled, averaged centroid.</description>
  <maintainer email="rafie.alifs@gmail.com">rafie</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>libpcl-all-dev</depend>
  <depend>r2_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
